--- a/survey/requirements.txt
+++ b/survey/requirements.txt
@@ -1,4 +1,12 @@
-django==2.0
-djangorestframework==3.8.2
-django-webpack-loader==0.5.0
+Babel==2.5.3
+Django==2.0
+django-debug-toolbar==1.9.1
+django-modeltranslation==0.13b1
 django-phonenumber-field==2.0.0
+django-webpack-loader==0.6.0
+djangorestframework==3.8.2
+phonenumbers==8.9.5
+Pillow==5.1.0
+psycopg2==2.7.4
+pytz==2018.4
+sqlparse==0.2.4
